www/docs/style/sass/app.scss
/* ... */
.morelink {
    font-size: em-calc(14px);
    text-align: right;
    font-weight: bold;
}

.infolink {
    text-align: right;
}

#main-content {
    padding-left: 0px;
}

#footer {
    padding-top: em-calc(40px);
    color: white;
    clear: both;
    margin-top: 1em;
    background-color: $footer;
    font-family: "Open Sans", sans-serif;

    #stay-up-to-date h5 {
        color: white;
        padding-bottom: 0.5em;
        border-bottom: solid 1px $light-text;
        font-family: Lato, sans-serif;
        font-size: 12px;
    }

    #footer-nav {
        margin-top: 1em;
        dt {
            font-size: 12px;
            font-weight: bold;
            font-family: Lato, sans-serif;
        }
        dd {
            font-size: 12px;
        }
    }

    #footer-about {
        font-size: 14px;
    }

    input {
        display: inline;
        border-radius: 2px;
        padding: 0.75em;
        font-size: 1em;
        border: none;
        height: auto;

        &[type=text] {
            width: 80%;
            margin-right: 0px;
            border-radius: 2px 0px 0px 2px;
        }
        &[type=submit] {
            background-color: $brand;
            color: white;
            margin-left: 0px;
            border-radius: 0px 2px 2px 0px;
        }
    }

    div.columns {
        font-size: em-calc(14);
    }
    a, a:hover, a:active {
        color: white;
        text-decoration: underline;
        text-decoration-style: dotted;
        -moz-text-decoration-style: dotted;
        -webkit-text-decoration-style: dotted;
    }
    dl {
        dt {
            font-weight: bold;
            border-bottom: solid 1px $light-text;
        }
        dd {
            a {
                text-decoration: none;
            }
        }
    }
}

#mp-panel {
    .person, .mp-details {
        float: left;
    }
    .mp-details {
        margin-left: 1em;
        input {
            -webkit-appearance: none;
            font-family: 'Open Sans', sans-serif;
            font-style: italic;
            border: 1px solid $borders;
            border-radius: 2px 0px 0px 2px;
            padding: 0.25em;
            border-right: 0px;
            &[name='s'] {
                width: 250px;
            }
            &.submit {
                background: transparent url('/images/search.png') no-repeat scroll center center;
                background-color: transparent;
                color: transparent;
                border-right: 1px solid $borders;
                border-left: 0px;
                border-radius: 0px 2px 2px 0px;
            }
        }
    }

    .subheader {
        font-family: "Lato light", sans-serif;
        font-size: 16px;
    }

    ul.hilites {
        margin-bottom: em-calc(8px);
        font-size: em-calc(14px);
    }

    @media only screen and ( max-width: $topbar-breakpoint ) {
        .person {
            float: left;
            margin-right: 1em;
            margin-bottom: 0.25em
        }
        .mp-details {
            float: none;
            margin-left: inherit;
        }
    }
}

// Vote record
#dreamcomparisons {
    margin-bottom: 0px;
    li {
        border-top: 1px dotted $borders;
        line-height: 2;
        .votepolicylink {
            font-family: 'Open Sans', sans-serif;
            font-size: em-calc(12);
            font-weight: bold;
            float: right;
        }
        &:last-child {
            border-bottom: 1px dotted $borders;
        }
    }
}


// Recent appearances
#searchresults {
    dt {
        font-size: em-calc(18);
        font-weight: bold;
        a {
            text-decoration: underline;
            text-decoration-style: dotted;
            -moz-text-decoration-style: dotted;
            -webkit-text-decoration-style: dotted;
        }
    }
    dd {
        font-size: em-calc(14);
        border-bottom: 1px dotted $borders;
        .appearance-date {
            font-weight: bold;
            font-family: 'Open Sans bold', sans-serif;
            .day {
                font-size: 12px;
                display: inline-block;
                border: 1px solid $borders;
                border-right: none;
            }
            .month {
                font-size: 12px;
                display: inline-block;
                color: white;
                background-color: $brand;
                border: 1px solid $borders;
                padding-left: 0.2em;
                padding-right: 0.2em;
            }
        }
        @media #{$small} {
            .appearance-date {
                min-width: 4em;
                float: left;
                text-align: center;
                margin-right: em-calc(16);
                .day {
                    font-size: 24px;
                    display: block;
                    border-right: 1px solid $borders;
                    border-bottom: none;
                }
                .month {
                    display: block;
                }
            }
            p {
                margin-left: 5em;
            }
        }
    }
}

// members interests
.regmemcategory {
    font-weight: bold;
    margin-top: em-calc(16);
    margin-bottom: em-calc(8);
    border-bottom: 1px dotted $borders;

    &:nth-of-type(1) {
        margin-top: 0px;
    }
}

.regmemitem {
    margin-bottom: em-calc(8);
    margin-left: 1em;
}

.person-button-column {
    @extend .columns;

    &.small-6 {
        &:nth-of-type(2) {
            padding-right: 0;
        }
        &:nth-of-type(3) {
            padding-left: 0;
        }
        @media #{$small} {
            &:nth-of-type(2) {
                padding-right: 0.75em;
            }
        }
    }
}
/* ... */

